--- a/style.css
+++ b/style.css
@@ -13,11 +13,15 @@ body{
     /* background-image: url(pics/bgIndex.jpg); */
     /* font-family: Arial, Helvetica, sans-serif; */
 }
+a{
+    text-decoration: none;
+    color: white;
+}
 /* Fin estilos body */
 
 /* Estilo Header */
 #headerIndex{
-    background-color: blueviolet;
+    background-color: red;
     width: 100%;
     display: flex;
 }
@@ -55,8 +59,8 @@ header > h1{
 }
 .listaHeader:hover > ul {
     display:block;
-    position: absolute;
-    background-color: blueviolet;
+    /* position: absolute; */
+    /* background-color: red; */
 }
 .listaHeader:hover > ul > li{
     display:flex;
@@ -66,12 +70,9 @@ header > h1{
 
 /* Estilos Main */
 main{
-    text-align: center;
+    /* text-align: center; */
     font-family: Sublima-Bold-Italic;
 }
-.eslogan > h2{
-}
-
 
 /* Fins estilos Main */
 
